# rdkit

./: CMakeLists.txt
Code/MinimalLib/: CMakeLists.txt  jswrapper.cpp  minilib.cpp  minilib.h
Code/MinimalLib/demo/: demo.html
Code/MinimalLib/docker/: Dockerfile
Code/MinimalLib/tests/: tests.js
Docs/Book/: Install.md
rdkit/Chem/: UnitTestMolIO.py  test_list.py
